Ajout section Activities et du Footer, travaille sur la partie mobile des filtres le bouton Rechercher disparait au profit de l'icone loupe (mais bug d'affichage)

--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ a.header-menu-naviguation {
     margin: 0;
     padding: 8px 0;
 }
+
 /* Fin de la Gestion du Menu dans le Header */
 /** Fin Gestion du Header */
 
@@ -109,12 +110,19 @@ a.header-menu-naviguation {
 h2.titre-populaire {
     margin-bottom: 0;
 }
+
 .titreH {
     margin-top: 8px;
 }
+
 /*** Fin Section les titres dans le main juste après header ****/
 
 /* Début de la Gestion du Filtre */
+
+.validation-recherche-icone {
+    display: none;
+}
+
 .filtre h4 {
   font-size: 20px;
   display: inline;
@@ -145,9 +153,9 @@ h2.titre-populaire {
 }
 
 .icon-du-filtre {
-  color: #0065FC;
-  margin-right: 10px;
-  padding: 20px 0 20px 20px;
+    color: #0065FC;
+    margin-right: 10px;
+    padding: 20px 0 20px 20px;
 }
 
 .section-information {
@@ -171,6 +179,7 @@ h2.titre-populaire {
     align-items: center;
     color: #0065FC;
 }
+
 /* Fin de la Gestion du Filtre */
 
 /* Début Formulaire et Bouton de Recherche */
@@ -189,7 +198,7 @@ h2.titre-populaire {
     background-color: #F2F2F2;
     border: #F2F2F2 solid 2px;
     border-radius: 15px 0 0 15px;
-    padding: 22px 14px ;
+    padding: 22px 14px;
 }
 
 .recherche {
@@ -205,7 +214,7 @@ h2.titre-populaire {
     width: 175px
 }
 
-.validation-recherche {
+.validation-recherche-bouton {
     color: white;
     background-color: #0065FC;
     border: #0065FC solid 1px;
@@ -220,6 +229,7 @@ h2.titre-populaire {
 input {
     border: none;
 }
+
 button {
     background: none;
     color: white;
@@ -228,6 +238,7 @@ button {
     font-weight: bold;
     font-size: 19px;
 }
+
 /* Fin Formulaire et Bouton de Recherche */
 
 /* Fin Ajout Zou 05/03/2024 15:50:59 */
@@ -239,7 +250,7 @@ button {
     display: flex;
     justify-content: space-between;
     column-gap: 20px;
-    width: 100%;    
+    width: 100%;
 }
 
 .hebergements-and-populaires section {
@@ -252,6 +263,11 @@ button {
 /****** Hebergements ***********/
 .hebergements {
     width: 65%;
+}
+
+.section-title-Hebergements {
+    margin: 0 0 30px 0;
+    font-size: 22px;
 }
 
 .hebergements-cards {
@@ -316,6 +332,100 @@ button {
     margin-bottom: 5px;
 }
 
+/****** Début Activitées ***********/
+.section-activities {
+    margin-top: 50px
+}
+
+.activities {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 10px;
+    margin: 20px 0;
+    padding-bottom: 30px;
+}
+
+.activities-card {
+    width: 24%;
+    max-width: 302px;
+}
+
+.activities-card a {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border-radius: 20px;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+}
+
+.activities-card img {
+    width: 100%;
+    height: 400px;
+    border-radius: 20px 20px 0px 0px;
+    object-fit: cover;
+}
+
+.activities-card h3 {
+    height: 55px;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    border-radius: 0px 0px 20px 20px;
+    padding-left: 10px;
+    margin: 4px;
+}
+
+/****** Fin Activitées ***********/
+
+
+/* Début Gestion du Footer */
+footer {
+    display: flex;
+    background-color: #F2F2F2;
+    padding: 0 20px 20px 20px;
+    margin-top: 30px;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+footer h3 {
+    margin: 15px 0;
+}
+
+.liste-footer {
+    margin-right: 180px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.lien-du-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    line-height: 30px;
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+.lien-du-footer a {
+    text-decoration: none;
+    font-family: Arial;
+    color: #000;
+}
+
+.etoile-desactiver {
+    color: #F2F2F2;
+}
+
+/* Fin Gestion du Footer */
 
 
 
@@ -324,6 +434,12 @@ button {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
+
+    /*   Filtre */
+    .filtre {
+        flex-direction: column;
+    }
+
     .hebergements-and-populaires {
         flex-direction: column;
     }
@@ -361,32 +477,73 @@ button {
 @media (max-width: 767.98px) {
     /* ... */
 
-		.main-container {
-		    padding: 0;
-		}
-		
+    .main-container {
+        padding: 0;
+    }
+
+    /* gestion filtre */
+    .validation-recherche-bouton {
+        display: none;
+    }
+
+    .validation-recherche-icone {
+
+        color: white; 
+        background-color: #0065FC;
+        /*  background: #0065FC; */
+        border:  1px;
+        border-radius: 0px 20px 20px 0px;
+        padding: 10px;
+        height: 25px;
+        width: 27px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0px 4px 4px 0px #00000040;
+    }
+
     .hebergements-and-populaires {
         flex-direction: column-reverse;
-    }		
-
-		.hebergements-and-populaires section {
-    	border-radius: 0px;
     }
 
-    .hebergements-cards, .populaires-cards {
-
-    flex-direction: column;
-    width: 100%;
-    }
-    
-   .hebergements-cards a, .populaires-cards a {
-    width: 100%;
+    .hebergements-and-populaires section {
+        border-radius: 0px;
     }
 
-		.populaires {
-		 margin-bottom : 30px;
-		}
+    .hebergements-cards,
+    .populaires-cards {
 
+        flex-direction: column;
+        width: 100%;
+    }
 
+    .hebergements-cards a,
+    .populaires-cards a {
+        width: 100%;
+    }
+
+    .populaires {
+        margin-bottom: 30px;
+    }
+
+    .activities {
+        flex-direction: column;
+        padding: 40px;
+        box-sizing: border-box;
+    }
+
+    .activities-card {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .activities-card img {
+        width: 100%;
+        height: 100;
+    }
+
+    footer {
+        flex-direction: column;
+    }
 
 }
