Correction du code CSS sur le footer (tous device) et pour le mobile l'icone Loupe a été mis en position relative pour coller à la maquette Figma et body mis a 'display: inline;' pour éviter bordure à droite

--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,8 @@
 
 body {
     display: flex;
-    /*justify-content: center;*/
+    justify-content: center;
     margin: 0;
-    /* Ajout zou le 05/03/2024 15:53:30 */
 }
 
 .main-container {
@@ -192,7 +191,6 @@ h2.titre-populaire {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
     width: 353px;
     padding-bottom: 20px;
     padding-top: 11px;
@@ -348,8 +346,12 @@ button {
     flex-direction: row;
     justify-content: space-between;
     gap: 10px;
-    margin: 20px 0;
     padding-bottom: 30px;
+}
+
+.section-title-activities {
+
+    font-size: 22px;
 }
 
 .activities-card {
@@ -403,7 +405,7 @@ footer h3 {
 }
 
 .liste-footer {
-    margin-right: 180px;
+    margin-right: auto;
     padding: 0;
     display: flex;
     flex-direction: column;
@@ -480,7 +482,10 @@ footer h3 {
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
-    /* ... */
+
+    body {
+        display: inline;
+    }
 
     .main-container {
         padding: 0;
@@ -514,11 +519,19 @@ footer h3 {
         padding: 0 40px;
     }
 
-    /* gestion filtre */
+
+    /* gestion formulaire */
+
+    .formulaire {
+        width: 100%;
+    }
+
     .validation-recherche-bouton {
         display: none;
         flex-direction: column;
     }
+
+    /* gestion filtre */
 
     .filtre ul {
         justify-content: space-between;
@@ -543,6 +556,9 @@ footer h3 {
         justify-content: center;
         align-items: center;
         box-shadow: 0px 4px 4px 0px #00000040;
+
+        position: relative;
+        left: -4%;
     }
 
     .validation-recherche-icone i {
@@ -556,6 +572,7 @@ footer h3 {
     .hebergements-and-populaires section {
         border-radius: 0px;
     }
+
 
     .hebergements-cards,
     .populaires-cards {
@@ -571,6 +588,12 @@ footer h3 {
 
     .populaires {
         margin-bottom: 30px;
+    }
+
+    .section-title-activities {
+        margin: 0 0 0 45px;
+        /*margin-left: 45px;*/
+        font-size: 22px;
     }
 
     .activities {
